test/compile-fail/resolution/use/glob/expected.txt
error: cannot glob-import without a scope
  ┌─ ./test/compile-fail/resolution/use/glob/top.rhdl:1:5
  │
1 │ use *;
  │     ^ this would re-import all crates and local items

